--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,10 @@
         "sensio/generator-bundle": "2.3.*",
         "incenteev/composer-parameter-handler": "~2.0"
     },
+    "require-dev": {
+        "atoum/atoum": "dev-master",
+        "atoum/atoum-bundle": "dev-master"
+    },
     "scripts": {
         "post-install-cmd": [
             "Incenteev\\ParameterHandler\\ScriptHandler::buildParameters",
