--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -36,3 +36,4 @@ security:
 #        - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
 #        - { path: ^/admin, role: ROLE_ADMIN }
 #        - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY, requires_channel: https }
+#        - { path: ^/, roles: IS_AUTHENTICATED_ANONYMOUSLY, requires_channel: https } # http://symfony.com/doc/current/cookbook/security/force_https.html
