--- a/src/Pablo/OrganisationBundle/Resources/config/routing.yml
+++ b/src/Pablo/OrganisationBundle/Resources/config/routing.yml
@@ -1,3 +1,3 @@
-pablo_organisation_homepage:
-    pattern:  /hello/{name}
-    defaults: { _controller: PabloOrganisationBundle:Default:index }
+pablo_organisation_attribution:
+    pattern:  /attribution
+    defaults: { _controller: PabloOrganisationBundle:Attribution:index }
