--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -33,7 +33,7 @@ security:
 #            anonymous:      true
 
     access_control:
-#        - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/user, role: ROLE_SUPER_ADMIN }
 #        - { path: ^/admin, role: ROLE_ADMIN }
 #        - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY, requires_channel: https }
 #        - { path: ^/, roles: IS_AUTHENTICATED_ANONYMOUSLY, requires_channel: https } # http://symfony.com/doc/current/cookbook/security/force_https.html
